[package]
name = "mmr-gadget"
version = "29.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
description = "MMR Client gadget for substrate"
homepage = "https://substrate.io"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
futures = "0.3.30"
log = { workspace = true, default-features = true }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-consensus-beefy = { path = "../../primitives/consensus/beefy" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-mmr-primitives = { path = "../../primitives/merkle-mountain-range" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }

[dev-dependencies]
parking_lot = "0.12.1"
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
tokio = "1.37"
