[package]
name = "pallet-grandpa"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME pallet for GRANDPA finality gadget"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
log = { workspace = true }
scale-info = { version = "2.11.1", default-features = false, features = ["derive", "serde"] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false, features = ["serde"] }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false, features = ["serde"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false, features = ["serde"] }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false, features = ["serde"] }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false, features = ["serde"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }

[dev-dependencies]
grandpa = { package = "finality-grandpa", version = "0.16.2", features = ["derive-codec"] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-offences/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
