[package]
name = "sp-mmr-primitives"
version = "26.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Merkle Mountain Range primitives."

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
log = { workspace = true }
mmr-lib = { package = "polkadot-ckb-merkle-mountain-range", path = "../../merkle-mountain-range", default-features = false }
serde = { features = ["alloc", "derive"], optional = true, workspace = true }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
thiserror = { optional = true, workspace = true }

[dev-dependencies]
array-bytes = "6.2.2"

[features]
default = ["std"]
std = [
	"codec/std",
	"dep:thiserror",
	"log/std",
	"mmr-lib/std",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-core/std",
	"sp-debug-derive/std",
	"sp-runtime/std",
]

# Serde support without relying on std features.
serde = ["dep:serde", "scale-info/serde", "sp-core/serde", "sp-runtime/serde"]
