[package]
name = "mmr-rpc"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Node-specific RPC methods for interaction with Merkle Mountain Range pallet."

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
jsonrpsee = { version = "0.22.5", features = ["client-core", "macros", "server-core"] }
serde = { features = ["derive"], workspace = true, default-features = true }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-mmr-primitives = { path = "../../../primitives/merkle-mountain-range" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }

[dev-dependencies]
serde_json = { workspace = true, default-features = true }
