[package]
name = "pallet-did-rpc"
description = "RPC interface for the  did pallet."
version = "1.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
pallet-did-rpc-runtime-api = { version = "1.0.0", path = "./runtime-api" }
pallet-did = { default-features = false, path = ".." }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }

sp-rpc = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
node-primitives = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0" }
jsonrpc-core = "18.0.0"

