[package]
name = "sp-consensus-babe"
version = "0.32.0"
authors.workspace = true
description = "Primitives for BABE consensus"
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { version = "0.1.79", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
serde = { features = ["alloc", "derive"], optional = true, workspace = true }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.12.0", optional = true, default-features = false }

[features]
default = ["std"]
std = [
	"async-trait",
	"codec/std",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-consensus-slots/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-timestamp/std",
]

# Serde support without relying on std features.
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-application-crypto/serde",
	"sp-consensus-slots/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
